# llm-web-ui

./: .env.local  .gitignore  AGENTS.md  Makefile  README.md  cert.pem  key.pem  model_config.json  pyproject.toml  test_web_interface.py
config/: config.yaml
docker/: .env.example  Dockerfile.higgs-audio  Dockerfile.indextts2  JINA_EMBEDDINGS.md  JINA_SEARCH_API.md  QUICKSTART.md  diagnose.sh  docker-compose.higgs.yml  docker-compose.yml  test_api_gateway.sh  test_jina_reader.sh  test_jina_rerank.sh  test_jina_search.sh  transform-embeddings.js
docker/indextts2/: BOOK_SPEECH_README.md  book_speech.py  openai-audio-server.py
docker/nginx/: entrypoint.sh  nginx.conf  nginx.conf.template
docker/open-llm-vtuber/: conf.yaml
docs/: JINA_READER_API.md  JINA_RERANK_API.md  README.md
scripts/: dev-server.sh
src/: app.py  gradio.py  model_manager.py
src/gradio/: __init__.py  jina_tools.py  multimodal_generation.py  online_client.py  speech.py  text_generation.py  theme.py  ui_components.py
src/gradio_old/: __init__.py  examples.py  generators.py  media_processing.py  model.py  theme.py
src/utils/: dask.py
tests/: conftest.py  test_asr_transcription.py  test_book_speech.py  test_book_speech_manual.py  test_gradio_integration.py  test_indextts2_service.py  test_multimodal_integration.py  test_online_local.py  test_online_multimodal.py  test_online_server.py  test_speech.py  test_streaming_fix.py  test_stt_config.py  test_text_generation.py  test_ui_layout.py  test_web_interface.py
